Vertex Group pop menu (CTRL+G) Set Active Group not updating Vertex Groups Panel #38721

Closed
opened 2014-02-19 14:37:33 +01:00 by Terry Wallwork · 8 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender GIT Rev 2014-02-19-18-05-37-a6b8785

I noticed that when using the Vertex Groups popup menu (CTRL+G) to
Set Active Vertex Groups the [Properties Editor > Object Data Context > Vertex Groups Panel]
doesn't update to reflect the change in active Vertex Group. You need to hover the mouse
over the area for the update to show.

I have attached my system-info.txt file, a demo blend file and a video showing the issue.

system-info.txt

Vertex_Group_-Popup_Menu(CTRL_G)_-Update_bug.blend

VertexGroupPopupUpdateBug.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT Rev 2014-02-19-18-05-37-a6b8785 I noticed that when using the Vertex Groups popup menu (CTRL+G) to Set Active Vertex Groups the [Properties Editor > Object Data Context > Vertex Groups Panel] doesn't update to reflect the change in active Vertex Group. You need to hover the mouse over the area for the update to show. I have attached my system-info.txt file, a demo blend file and a video showing the issue. [system-info.txt](https://archive.blender.org/developer/F78086/system-info.txt) [Vertex_Group_-_Popup_Menu_(CTRL_G)_-_Update_bug_.blend](https://archive.blender.org/developer/F78087/Vertex_Group_-_Popup_Menu__CTRL_G__-_Update_bug_.blend) [VertexGroupPopupUpdateBug.webm](https://archive.blender.org/developer/F78088/VertexGroupPopupUpdateBug.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1
Dalai Felinto self-assigned this 2014-02-19 15:05:14 +01:00

it's missing a notifier most likely. I'll fix that

it's missing a notifier most likely. I'll fix that

This issue was referenced by blender/blender-addons-contrib@d85d117b32

This issue was referenced by blender/blender-addons-contrib@d85d117b32523db4c57113ab58b95947edf9c187

This issue was referenced by d85d117b32

This issue was referenced by d85d117b32523db4c57113ab58b95947edf9c187

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d85d117b32.

Closed by commit d85d117b32.

Thanks for the report, fixed now.

Thanks for the report, fixed now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38721
No description provided.