fix T38721 Vertex Group pop menu (CTRL+G) Set Active Group not updating Vertex Groups Panel

I set ND_VERTEX_GROUP to update the buttons.
Reviewed by: Lukas Toenne